--- a/src/App.css
+++ b/src/App.css
@@ -10,18 +10,6 @@
   cursor: pointer;
   border: 2px solid rgb(11, 94, 215);
   border-radius: 10%;
-
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
 }
 
 .App-header {
@@ -37,16 +25,8 @@
   color: rgb(112, 76, 182);
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+#error-page {
+  text-align: center;
+  margin-top: 5rem;
 }
-
 
